# valtapy

./: .gitignore  README.md  README_CONFIG.md  README_MAIN.md  README_STRUCTURE.md  TODO  example.py  main.py  privacy_examples.py  pyproject.toml  quality_examples.py  requirements.txt  run_pipeline.py
.claude/: settings.local.json
configs/: config.json  config_evaluation_only.json  config_full_pipeline.json  config_utility_ml_efficiency.json  config_with_mia.json
docs/: MLE_ARCHITECTURE.md  MLE_STRUCTURE.md  ML_EFFICIENCY_METRIC.md
docu/: .$Doc.drawio.bkp  Doc.drawio
examples/: config_minimal.yaml  ml_efficiency_example.py
src/old_impl/: __main__.py
src/old_impl/application/: orchestrator.py  pipeline.py  validators.py
src/old_impl/domain/: errors.py  taxonomy.py
src/old_impl/infrastructure/io/: __init__.py
src/old_impl/infrastructure/metrics/: registry.py
src/old_impl/infrastructure/metrics/fidelity/: __init__.py  correlation_delta.py
src/old_impl/infrastructure/metrics/privacy/: __init__.py
src/old_impl/infrastructure/metrics/utility/: accuracy.py
src/old_impl/infrastructure/preprocess/: registry.py
src/old_impl/infrastructure/reporting/: __init__.py
src/old_impl/infrastructure/runtime/: __init__.py
src/old_impl/interface/: cli.py
src/valtapy/: __init__.py
src/valtapy/evaluation/: __init__.py  contracts.py  entities.py  exceptions.py  orchestrator.py  registry.py
src/valtapy/evaluation/metrics/: __init__.py
src/valtapy/evaluation/metrics/fidelity/: __init__.py  ks_test.py
src/valtapy/evaluation/metrics/privacy/: __init__.py  membership_inference.py
src/valtapy/evaluation/metrics/utility/: __init__.py  ml_contracts.py  (+1 more)
src/valtapy/ingestion/: __init__.py  contracts.py  entities.py  exceptions.py
src/valtapy/ingestion/readers/: __init__.py  csv_reader.py
src/valtapy/preprocessing/: __init__.py  contracts.py  entities.py  exceptions.py
src/valtapy/preprocessing/processors/: __init__.py  basic_preprocessor.py
src/valtapy/validation/: __init__.py  contracts.py  entities.py  exceptions.py
src/valtapy/validation/validators/: __init__.py  basic_validator.py
src/valtapyV2/: __init__.py
src/valtapyV2/application/: __init__.py  aggregator.py  orchestrator.py  plan_builder.py  policies.py  validators.py
src/valtapyV2/domain/: __init__.py  contracts.py  entities.py
src/valtapyV2/infrastructure/: __init__.py
src/valtapyV2/infrastructure/io/: loaders.py  schema.py
src/valtapyV2/infrastructure/metrics/: __init__.py  base.py
src/valtapyV2/infrastructure/preprocess/: __init__.py  transformers.py
src/valtapyV2/infrastructure/reporting/: json_reporter.py  markdown_reporter.py  registry.py
src/valtapyV2/infrastructure/runtime/: cache.py  config.py  logging.py  parallel.py
src/valtapyV2/interface/: __init__.py  sdk.py
tests/: __init__.py  basic_functionality_test.py  conftest.py
tests/integration/: __init__.py  test_metric_registry.py
tests/unit/: test_cli_smoke.py  test_contracts.py  test_orchestrator_smoke.py  test_statsstore_cache.py
tests/unit/evaluation/: __init__.py  test_ks_test.py  test_membership_inference.py  test_ml_efficiency_metrics.py  test_ml_metrics_output.py
tests/unit/infrastructure/io/: __init__.py  test_loaders.py
tests/unit/ingestion/: __init__.py  test_csv_reader.py  test_entities.py  test_exceptions.py
tests/unit/preprocessing/: __init__.py  test_basic_preprocessor.py  test_entities.py  test_exceptions.py
tests/unit/validation/: __init__.py  test_basic_validator.py  test_entities.py
tests/utils/: __init__.py  data_generators.py  test_helpers.py
valtapy/: __init__.py  privacy_examples.py  valtapy.py
valtapy/factory/: validator_factory.py
valtapy/interfaces/: __init__.py  interfaces.py
valtapy/results/: result_saver.py  validation_result.py
valtapy/validators/: __init__.py
valtapy/validators/privacy/: __init__.py  base_privacy.py  privacy.py
valtapy/validators/privacy/extraction/: __init__.py  extraction.py
valtapy/validators/privacy/inference/: __init__.py  inference.py
valtapy/validators/privacy/similarity/: __init__.py
valtapy/validators/quality/: __init__.py  base_quality.py  quality.py
valtapy/validators/quality/detection/: __init__.py  detection.py  detection_orchestrator.py
valtapy/validators/quality/statistics/: __init__.py  stadistics.py  statistics_orchestrator.py
valtapy/validators/utility/: __init__.py  utility_orchestrator.py
valtapy/validators/utility/efficiency/: __init__.py  efficiency.py
valtapy/validators/utility/ml_effiency/: ml_efficiency.py
(+52 files in other folders)
